--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "ai"]
 	path = ai
-	url = ssh://git@git.pixelatedempathy.tech/chad/ai.git
+	url = ssh://git@git.pixelatedempathy.tech:pixeltech/ai.git
 	ignore = all
