Increase stdout maxBuffer to prevent length exceeded errors
Updated the buffer size in the process configuration to handle larger output streams, resolving 'stdout maxBuffer length exceeded' errors encountered during data processing tasks.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -405,7 +405,7 @@ jobs:
         run: mkdir -p coverage/.tmp
 
       - name: Run tests with increased timeout
-        run: pnpm test --pool=threads --poolOptions.threads.minThreads=0 --poolOptions.threads.maxThreads=3
+        run: pnpm test --pool=forks --isolate --no-coverage
         env:
           VITEST_TIMEOUT: 30000
           REDIS_URL: redis://localhost:6379
