Update @vitejs/plugin-react to v5.0.1 and improve script emojis
- Updated @vitejs/plugin-react from ^4.7.0 to ^5.0.1 for latest features and fixes.
- Changed emojis in ts:compare script from \u2705 to ✅ for better display consistency.

--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "ts:check:debug": "tsc --noEmit --project tsconfig.debug.json",
     "ts:check:main": "tsc --noEmit --project tsconfig.json",
     "ts:check:aws": "tsc --noEmit --project tsconfig.aws.json",
-    "ts:compare": "pnpm run ts:check:debug && echo '\u2705 Debug config works' && pnpm run ts:check:main && echo '\u2705 Main config works'",
+    "ts:compare": "pnpm run ts:check:debug && echo '✅ Debug config works' && pnpm run ts:check:main && echo '✅ Main config works'",
     "ts:switch:debug": "cp tsconfig.json tsconfig.json.backup && cp tsconfig.debug.json tsconfig.json",
     "ts:switch:main": "cp tsconfig.json.backup tsconfig.json",
     "ts:logs": "echo 'TypeScript logs location varies by system. Run: ./debug-typescript.sh normal'",
@@ -317,7 +317,7 @@
     "@unocss/transformer-variant-group": "^66.3.3",
     "@unocss/vite": "^66.3.3",
     "@vercel/kv": "^1.0.1",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react": "^5.0.1",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "@vue/runtime-core": "^3.5.18",
