--- a/src/integrations/react/package.json
+++ b/src/integrations/react/package.json
@@ -40,17 +40,17 @@
     "vnode-children.js"
   ],
   "dependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react": "^5.0.1",
     "ultrahtml": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "astro": "5.13.2",
     "cheerio": "1.0.0-rc.12",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "vite": "^5.0.12",
-    "astro": "4.16.19"
+    "vite": "^5.0.12"
   },
   "peerDependencies": {
     "@types/react": "^17.0.50 || ^18.0.21",
