--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -356,7 +356,7 @@ rollback:
 
 # Health Check & Notification
 health-check:
-  stage: test
+  stage: deploy
   image: alpine:latest
   script:
     - apk add --no-cache curl
