Refactor CI/CD workflows and update bias detection configs
- Improved formatting and configurations in GitHub Actions workflow for bias detection
- Removed outdated CI/CD workflow file
- Updated GitLab CI, Azure Pipelines, Python project, and pytest configs
- Enhanced bias detection engine and related tests
- Added documentation for runner config fix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ qodana:
     - merge_requests
   image:
     name: jetbrains/qodana-js
-    entrypoint: [ "" ]
+    entrypoint: [""]
   variables:
     QODANA_TOKEN: $qodana_token
     GIT_STRATEGY: fetch
@@ -17,6 +17,7 @@ qodana:
 # Builds and pushes frontend container to GitLab Container Registry
 
 stages:
+  - validate
   - build
   - test
   - deploy
@@ -30,6 +31,24 @@ variables:
   GIT_STRATEGY: none
   # Force SSH URL for repository checkout
   CI_REPOSITORY_URL: git@git.pixelatedempathy.tech:pixeltech/pixelated.git
+
+# Validate runner capabilities
+validate-runner:
+  stage: validate
+  image: docker:24.0.5
+  services:
+    - docker:24.0.5-dind
+  script:
+    - echo "Validating GitLab runner capabilities..."
+    - docker --version
+    - docker info
+    - echo "✅ Docker is available and working"
+    - echo "Runner: $CI_RUNNER_DESCRIPTION"
+    - echo "Executor: $CI_RUNNER_EXECUTOR"
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_COMMIT_BRANCH == "main"'
+    - if: '$CI_MERGE_REQUEST_ID'
 
 # Build frontend container
 build-frontend:
@@ -59,14 +78,8 @@ build-frontend:
     # Enable Docker layer caching for faster builds
     - docker build --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache -t $CONTAINER_IMAGE -t $CONTAINER_IMAGE_LATEST .
     # If using npm/pnpm/yarn, cache dependencies for faster installs
-    - if [ -f package-lock.json ]; then
-        echo "Restoring npm cache...";
-        npm ci --cache .npm --prefer-offline;
-      fi
-    - if [ -f pnpm-lock.yaml ]; then
-        echo "Restoring pnpm cache...";
-        pnpm install --frozen-lockfile --store-dir .pnpm-store;
-      fi
+    - if [ -f package-lock.json ]; then echo "Restoring npm cache..."; npm ci --cache .npm --prefer-offline; fi
+    - if [ -f pnpm-lock.yaml ]; then echo "Restoring pnpm cache..."; pnpm install --frozen-lockfile --store-dir .pnpm-store; fi
     - docker push $CONTAINER_IMAGE
     - docker push $CONTAINER_IMAGE_LATEST
     - echo "✅ Frontend container pushed to GitLab Container Registry"
@@ -125,19 +138,19 @@ deploy-vps:
     - |
       ssh $VPS_USER@$VPS_HOST << 'EOF'
         set -e
-      
+
         # Colors for remote output
         RED='\033[0;31m'
         GREEN='\033[0;32m'
         YELLOW='\033[1;33m'
         BLUE='\033[0;34m'
         NC='\033[0m'
-      
+
         print_status() { echo -e "${GREEN}[VPS]${NC} $1"; }
         print_error() { echo -e "${RED}[VPS ERROR]${NC} $1"; }
-      
+
         print_status "Starting GitLab container deployment..."
-      
+
         # Install Docker if not present
         if ! command -v docker &> /dev/null; then
             print_status "Installing Docker..."
@@ -145,7 +158,7 @@ deploy-vps:
             systemctl start docker
             systemctl enable docker
         fi
-      
+
         # Install Caddy if not present and domain is configured
         if [[ -n "$VPS_DOMAIN" ]] && ! command -v caddy &> /dev/null; then
             print_status "Installing Caddy..."
@@ -157,29 +170,29 @@ deploy-vps:
             apt-get install -y caddy
             systemctl enable caddy
         fi
-      
+
         # Login to GitLab Container Registry
         print_status "Logging into GitLab Container Registry..."
         echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
-      
+
         # Pull latest image from GitLab
         print_status "Pulling latest image from GitLab Container Registry..."
         docker pull $CONTAINER_IMAGE_LATEST
-      
+
         # Stop existing container
         print_status "Stopping existing container..."
         docker stop pixelated-app 2>/dev/null || true
         docker rm pixelated-app 2>/dev/null || true
-      
+
         # Set up environment variables for container
         PUBLIC_URL="http://$VPS_HOST"
         CORS_ORIGINS="http://$VPS_HOST,https://$VPS_HOST"
-      
+
         if [[ -n "$VPS_DOMAIN" ]]; then
             PUBLIC_URL="https://$VPS_DOMAIN"
             CORS_ORIGINS="$CORS_ORIGINS,http://$VPS_DOMAIN,https://$VPS_DOMAIN"
         fi
-      
+
         # Run new container
         print_status "Starting new container from GitLab image..."
         docker run -d \
@@ -200,10 +213,10 @@ deploy-vps:
           -e PUBLIC_URL="$PUBLIC_URL" \
           -e CORS_ORIGINS="$CORS_ORIGINS" \
           $CONTAINER_IMAGE_LATEST
-      
+
         # Wait for container to start
         sleep 15
-      
+
         # Check container status
         if docker ps | grep -q pixelated-app; then
             print_status "✅ Container is running"
@@ -213,17 +226,17 @@ deploy-vps:
             docker logs pixelated-app
             exit 1
         fi
-      
+
         # Configure Caddy if domain is set
         if [[ -n "$VPS_DOMAIN" ]]; then
             print_status "Configuring Caddy for domain: $VPS_DOMAIN"
             cat > /etc/caddy/Caddyfile << 'CADDY_EOF'
         $VPS_DOMAIN {
             reverse_proxy localhost:4321
-      
+
             # Enable compression
             encode gzip
-      
+
             # Security headers
             header {
                 # Enable HSTS
@@ -237,35 +250,35 @@ deploy-vps:
                 # Referrer policy
                 Referrer-Policy strict-origin-when-cross-origin
             }
-      
+
             # Health check endpoint
             handle /api/health* {
                 reverse_proxy localhost:4321
             }
-      
+
             # Static assets with long cache
             handle /assets/* {
                 reverse_proxy localhost:4321
                 header Cache-Control "public, max-age=31536000, immutable"
             }
-      
+
             # All other requests
             handle {
                 reverse_proxy localhost:4321
             }
         }
         CADDY_EOF
-      
+
             # Test and reload Caddy
             print_status "Testing Caddy configuration..."
             caddy validate --config /etc/caddy/Caddyfile
-      
+
             print_status "Starting Caddy..."
             systemctl restart caddy
         fi
-      
+
         print_status "✅ VPS deployment completed!"
-      
+
         # Show access URLs
         print_status "Application URLs:"
         print_status "  Direct: https://$VPS_HOST:4321"
@@ -305,7 +318,7 @@ build-ai-backend:
     - if: $CI_COMMIT_BRANCH == "main"
       changes:
         - ai/**/*
-  allow_failure: true  # Allow failure since AI backend is large
+  allow_failure: true # Allow failure since AI backend is large
 
 # Security scan
 security-scan:
@@ -326,10 +339,10 @@ security-scan:
       else
         echo "⚠️  Container may be running as root"
       fi
-      
+
       echo "Checking exposed ports..."
       docker run --rm $CONTAINER_IMAGE netstat -tlnp 2>/dev/null || echo "netstat not available"
-      
+
       echo "✅ Security scan completed"
   dependencies:
     - build-frontend
@@ -342,16 +355,26 @@ security-scan:
 rollback:
   stage: deploy
   image: alpine:latest
+  before_script:
+    - apk add --no-cache openssh-client
+    - eval $(ssh-agent -s)
+    - echo "$VPS_SSH_PRIVATE_KEY_B64" | base64 -d | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan -H $VPS_HOST >> ~/.ssh/known_hosts
   script:
     - echo "Rolling back to previous container version..."
-    - docker pull $CONTAINER_IMAGE_LATEST_PREV || echo "No previous image found"
-    - docker stop pixelated-app || true
-    - docker rm pixelated-app || true
-    - docker run -d --name pixelated-app -p 4321:4321 $CONTAINER_IMAGE_LATEST_PREV
-    - echo "Rollback complete"
+    - |
+      ssh $VPS_USER@$VPS_HOST << 'EOF'
+        echo "Performing rollback on VPS..."
+        docker pull $CONTAINER_IMAGE_LATEST_PREV || echo "No previous image found"
+        docker stop pixelated-app || true
+        docker rm pixelated-app || true
+        docker run -d --name pixelated-app --restart unless-stopped -p 4321:4321 $CONTAINER_IMAGE_LATEST_PREV
+        echo "✅ Rollback complete"
+      EOF
   rules:
-    - if: $CI_DEPLOY_FAILED == "true"
-      when: on_failure
+    - when: manual
   allow_failure: true
 
 # Health Check & Notification
@@ -421,10 +444,18 @@ tag-image:
   image: docker:24.0.5
   services:
     - docker:24.0.5-dind
-  script:
-    - echo "Tagging image with branch and build number..."
-    - docker tag $CONTAINER_IMAGE $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-$CI_PIPELINE_ID
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-$CI_PIPELINE_ID
+  variables:
+    DOCKER_BUILDKIT: 1
+  before_script:
+    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
+  script: |
+    echo "Tagging image with branch and build number..."
+    docker pull $CONTAINER_IMAGE
+    docker tag $CONTAINER_IMAGE $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-$CI_PIPELINE_ID
+    docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-$CI_PIPELINE_ID
+    echo "✅ Image tagged and pushed: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-$CI_PIPELINE_ID"
+  dependencies:
+    - build-frontend
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
     - if: $CI_COMMIT_BRANCH == "main"
@@ -456,14 +487,18 @@ cache:
 # Automated Cleanup (improved)
 cleanup:
   stage: deploy
-  image: alpine:latest
+  image: docker:24.0.5
+  services:
+    - docker:24.0.5-dind
+  before_script:
+    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
   script:
     - echo "Cleaning up old container images..."
-    - docker image prune -af
-    - echo "Old images removed"
+    - docker image prune -af --filter "until=24h"
+    - docker system prune -f --filter "until=24h"
+    - echo "✅ Old images and containers removed"
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
       when: manual
   allow_failure: true
-
 # Documentation (see docs/ci-cd/pipeline-variables.md for variable setup and troubleshooting)
