--- a/pytest.ini
+++ b/pytest.ini
@@ -24,3 +24,5 @@ markers =
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
+    ignore:Importing 'parser.split_arg_string' is deprecated.*:DeprecationWarning:spacy.*
+    ignore:Importing 'parser.split_arg_string' is deprecated.*:DeprecationWarning:weasel.*
