--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
   "cryptography",
   "requests",
   "python-dotenv",
+  "click<9.0",
   "numba>=0.56.0",
   "faiss-cpu>=1.11.0",
   "sentence-transformers>=5.0.0",
