--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,8 +38,11 @@ validate-runner:
   image: docker:24.0.5
   services:
     - docker:24.0.5-dind
+  variables:
+    DOCKER_DRIVER: overlay2
   script:
     - echo "Validating GitLab runner capabilities..."
+    - apk add --no-cache openssh-client git
     - docker --version
     - docker info
     - echo "✅ Docker is available and working"
@@ -66,6 +69,7 @@ build-frontend:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
     - ssh-keyscan -H gitlab.com >> ~/.ssh/known_hosts
+    - ssh-keyscan -H git.pixelatedempathy.tech >> ~/.ssh/known_hosts
     # Login to container registry
     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
   script:
