Update CI/CD workflows and enhance bias detection features
- Bump GitHub Actions and Azure deployment tools to latest versions for improved security and compatibility
- Enhance bias detection components, analytics services, and related tests for better performance and functionality
- Refine infrastructure files, scripts, and remove obsolete VSCode settings for streamlined maintenance

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ validate-runner:
     - apk add --no-cache openssh-client git
     - docker --version
     - docker info
-    - echo "✅ Docker is available and working"
+    - echo "Docker is available and working"
     - echo "Runner:" $CI_RUNNER_DESCRIPTION
     - echo "Executor:" $CI_RUNNER_EXECUTOR
   rules:
