--- a/.github/workflows/azure-deployment.yml
+++ b/.github/workflows/azure-deployment.yml
@@ -30,7 +30,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set environment
         id: set-env
@@ -135,7 +135,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Azure Login
         uses: azure/login@v2
@@ -146,7 +146,7 @@ jobs:
 
       - name: Deploy Bicep template
         id: bicep
-        uses: azure/arm-deploy@v1
+        uses: azure/arm-deploy@v2
         with:
           scope: resourcegroup
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
@@ -155,6 +155,9 @@ jobs:
           parameters: |
             environment=${{ needs.build.outputs.environment }}
             azureLocation=${{ env.AZURE_LOCATION }}
+            containerRegistryName=pixelatedcr
+            containerAppName=pixelated-web
+            appServiceName=pixelated
           failOnStdErr: false
 
       - name: Get deployment outputs
@@ -215,14 +218,14 @@ jobs:
   docker-build:
     runs-on: ubuntu-latest
     needs: [ build, deploy-infrastructure ]
-    if: ${{ always() && needs.build.result == 'success' }}
+    if: ${{ always() && needs.build.result == 'success' && needs.deploy-infrastructure.result == 'success' }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Download build artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v5
         with:
           name: build-artifacts
 
@@ -236,23 +239,21 @@ jobs:
       - name: Get container registry details
         id: acr
         run: |
+          # Get ACR details from infrastructure deployment outputs
           REGISTRY_NAME="${{ needs.deploy-infrastructure.outputs.registry-name }}"
           LOGIN_SERVER="${{ needs.deploy-infrastructure.outputs.registry-login-server }}"
-
-          # Fallback to discovery if not provided by infra job (e.g., infra skipped)
-          if [[ -z "$REGISTRY_NAME" ]]; then
-            REGISTRY_NAME=$(az acr list --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query '[0].name' -o tsv)
-          fi
-
-          if [[ -z "$REGISTRY_NAME" ]]; then
-            echo "No Azure Container Registry found or provided in resource group '${{ env.AZURE_RESOURCE_GROUP }}'. Ensure infrastructure has been deployed."
+          
+          # Validate that we got the required values from the infrastructure deployment
+          if [[ -z "$REGISTRY_NAME" || "$REGISTRY_NAME" == "null" ]]; then
+            echo "Failed to get Azure Container Registry name from infrastructure deployment"
             exit 1
           fi
-
-          if [[ -z "$LOGIN_SERVER" ]]; then
-            LOGIN_SERVER=$(az acr show --name "$REGISTRY_NAME" --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query 'loginServer' -o tsv)
+          
+          if [[ -z "$LOGIN_SERVER" || "$LOGIN_SERVER" == "null" ]]; then
+            echo "Failed to get Azure Container Registry login server from infrastructure deployment"
+            exit 1
           fi
-
+          
           echo "registry-name=$REGISTRY_NAME" >> $GITHUB_OUTPUT
           echo "login-server=$LOGIN_SERVER" >> $GITHUB_OUTPUT
 
@@ -289,21 +290,19 @@ jobs:
       - name: Get deployment details
         id: details
         run: |
-          # Prefer app service name from infra outputs
+          # Get app service name from infrastructure outputs
           APP_SERVICE_NAME="${{ needs.deploy-infrastructure.outputs.app-service-name }}"
-          if [[ -z "$APP_SERVICE_NAME" || "$APP_SERVICE_NAME" == "null" ]]; then
-            APP_SERVICE_NAME=$(az webapp list --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query '[0].name' -o tsv)
-          fi
-          # Prefer registry login server from infra outputs
           LOGIN_SERVER="${{ needs.deploy-infrastructure.outputs.registry-login-server }}"
-          if [[ -z "$LOGIN_SERVER" ]]; then
-            REGISTRY_NAME=$(az acr list --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query '[0].name' -o tsv)
-            if [[ -n "$REGISTRY_NAME" ]]; then
-              LOGIN_SERVER=$(az acr show --name "$REGISTRY_NAME" --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query 'loginServer' -o tsv)
-            else
-              echo "No Azure Container Registry found or provided in resource group '${{ env.AZURE_RESOURCE_GROUP }}'."
-              exit 1
-            fi
+          
+          # Validate that we got the required values
+          if [[ -z "$APP_SERVICE_NAME" || "$APP_SERVICE_NAME" == "null" ]]; then
+            echo "Failed to get App Service name from infrastructure deployment"
+            exit 1
+          fi
+          
+          if [[ -z "$LOGIN_SERVER" || "$LOGIN_SERVER" == "null" ]]; then
+            echo "Failed to get Container Registry login server from infrastructure deployment"
+            exit 1
           fi
 
           echo "app-service-name=$APP_SERVICE_NAME" >> $GITHUB_OUTPUT
