--- a/.github/workflows/dependency-scan.yml
+++ b/.github/workflows/dependency-scan.yml
@@ -5,60 +5,60 @@ permissions:
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
   schedule:
-  - cron: '0 0 * * 0' # Run every Sunday at midnight
+    - cron: '0 0 * * 0' # Run every Sunday at midnight
 
 jobs:
   node_scan:
     name: Scan Node.js Dependencies
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v5
 
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v4
-      with:
-        version: 10.15.0
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.15.0
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '22'
-        cache: 'pnpm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'pnpm'
 
-    - name: Install dependencies
-      run: pnpm install
+      - name: Install dependencies
+        run: pnpm install
 
-    - name: Run pnpm audit
-      run: pnpm audit
+      - name: Run pnpm audit
+        run: pnpm audit
 
   python_scan:
     name: Scan Python Dependencies
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v5
 
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Install uv
-      run: pip install uv
+      - name: Install uv
+        run: pip install uv
 
-    - name: Create virtual environment
-      run: uv venv
+      - name: Create virtual environment
+        run: uv venv
 
-    - name: Install project dependencies
-      run: uv pip sync pyproject.toml
+      - name: Install project dependencies
+        run: uv pip sync pyproject.toml
 
-    - name: Install pip-audit in venv
-      run: uv pip install --upgrade pip pip-audit
+      - name: Install pip-audit in venv
+        run: uv pip install --upgrade pip pip-audit
 
-    - name: Run pip-audit
-      run: uv run pip-audit
+      - name: Run pip-audit
+        run: uv run pip-audit
